--- a/package.json
+++ b/package.json
@@ -1,26 +1,15 @@
 {
-  "name": "randomanimepicker",
-  "homepage": "http://magonxesp.github.io/RandomAnimePicker/",
-  "publishConfig": {
-    "registry": "https://npm.pkg.github.com/"
-  },
-  "version": "2.0.0",
-  "private": false,
+  "name": "@magonxesp/webpack-template",
+  "version": "0.0.0",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack build --mode=development",
     "build:prod": "webpack build --mode=production",
     "watch": "webpack watch",
-    "serve": "webpack-dev-server --open",
-    "deploy": "npm run build:prod && gh-pages -d dist"
+    "serve": "webpack-dev-server --open"
   },
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
-    "@fortawesome/fontawesome-free": "^5.15.4",
-    "@fortawesome/fontawesome-svg-core": "^1.2.36",
-    "@fortawesome/free-solid-svg-icons": "^5.15.4",
-    "@fortawesome/vue-fontawesome": "^2.0.6",
-    "jikanjs": "^0.7.0",
     "uuid": "^8.3.2",
     "vue": "^2.6.14"
   },
@@ -36,7 +25,6 @@
     "babel-loader": "^8.2.2",
     "css-loader": "^5.0.1",
     "file-loader": "^6.2.0",
-    "gh-pages": "^2.2.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^1.3.6",
     "resolve-url-loader": "^3.1.2",
