--- a/package.json
+++ b/package.json
@@ -14,13 +14,8 @@
     "vue": "^2.6.14"
   },
   "devDependencies": {
-    "@babel/core": "^7.10.4",
-    "@babel/plugin-proposal-class-properties": "^7.10.4",
-    "@babel/plugin-proposal-private-methods": "^7.10.4",
-    "@babel/plugin-syntax-class-properties": "^7.10.4",
-    "@babel/plugin-transform-runtime": "^7.10.4",
-    "@babel/preset-env": "^7.10.4",
-    "@babel/register": "^7.10.4",
+    "@babel/core": "^7.16",
+    "@babel/preset-env": "^7.16",
     "babel-cli": "^6.26.0",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.0.1",
@@ -32,6 +27,8 @@
     "sass-loader": "^10.1.0",
     "source-map-loader": "^2.0.0",
     "style-loader": "^2.0.0",
+    "ts-loader": "^9.2.6",
+    "typescript": "^4.5.3",
     "vue-loader": "^15.9.8",
     "vue-template-compiler": "^2.6.14",
     "webpack": "^5.12.1",
